# SuperAssist-Plus

./: .env.example  .gitignore  AGENT.md  README.md  agent_security_survey_2025_2026.md  agent_team.toml  pyproject.toml
frontend/: AGENT.md  app.js  index.html  styles.css
skills/public/deep-research/: SKILL.md
src/: AGENT.md
src/superassist_plus/: AGENT.md  __init__.py  cli.py  config.py  llm.py  models.py  observability.py  run_events.py
src/superassist_plus/agent/: AGENT.md  __init__.py  middleware.py  runtime.py  short_memory.py  state.py
src/superassist_plus/agent_teams/: __init__.py  bus.py  config.py  context.py  supervisor.py
src/superassist_plus/channels/: AGENT.md  __init__.py  feishu.py  store.py
src/superassist_plus/memory/: AGENT.md  __init__.py  embedding.py  scoring.py  service.py  storage.py  vector_index.py  writer.py
src/superassist_plus/skills/: AGENT.md  __init__.py  registry.py
src/superassist_plus/subagents/: __init__.py  config.py  executor.py  registry.py  store.py
src/superassist_plus/tools/: AGENT.md  __init__.py  basic.py  files.py  shell.py  task.py  team.py  web.py
src/superassist_plus/ui/: AGENT.md  __init__.py  server.py
tests/: AGENT.md  test_agent_teams.py  test_embedding.py  test_feishu_channel.py  test_llm.py  test_memory.py  test_memory_scoring.py  test_memory_writer.py  test_runtime.py  test_skills.py  test_smoke.py  test_subagents.py  test_task_tool.py  test_tools.py  test_ui.py
